# Echecs

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.590aea2  CMakeLists.txt.user.f0e04f6  CMakeLists.txt.user.ff601ab  ChessBoard.cpp  ChessBoard.h  Echiquier.cpp  Echiquier.cxx  Echiquier.gcda  Echiquier.gcno  Echiquier.h  Joueur.cpp  Joueur.cxx  Joueur.gcda  Joueur.gcno  Joueur.h  Piece.cpp  Piece.cxx  Piece.d  Piece.gcda  Piece.gcno  Piece.h  Player.cpp  Player.h  README.md  Resource.qrc  Run.cxx  TODO  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  stop.cpp  stop.h  stop.ui  testPiece  testPiece.cxx  testPiece.gcda  (+6 more)
Class/: Echiquier.cxx  Joueur.cxx  Piece.cxx
Interfaces/: Echiquier.h  Joueur.h  Piece.h
archive/: ChessBoard.h  mainwindow.cpp  mainwindow.ui
doc/html/: _chess_board_8cpp.html  _chess_board_8h.html  _chess_board_8h_source.html  _piece_8cpp.html  _piece_8h.html  _piece_8h_source.html  _player_8cpp.html  _player_8h.html  _player_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_bishop-members.html  class_bishop.html  class_chess_board-members.html  class_chess_board.html  class_king-members.html  class_king.html  class_knight-members.html  class_knight.html  class_main_window-members.html  class_main_window.html  class_pawn-members.html  class_pawn.html  class_piece-members.html  class_piece.html  class_player-members.html  class_player.html  class_player_black-members.html  class_player_black.html  class_player_white-members.html  class_player_white.html  class_queen-members.html  class_queen.html  class_rook-members.html  class_rook.html  classes.html  dir_810c7fdddeceb1a8bcc14a129f2fcb99.html  files.html  functions.html  functions_func.html  (+14 more)
doc/latex/: _chess_board_8cpp.tex  _chess_board_8h.tex  _chess_board_8h_source.tex  _piece_8cpp.tex  _piece_8h.tex  _piece_8h_source.tex  _player_8cpp.tex  _player_8h.tex  _player_8h_source.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  class_bishop.tex  class_chess_board.tex  class_king.tex  class_knight.tex  class_main_window.tex  class_pawn.tex  class_piece.tex  class_player.tex  class_player_black.tex  class_player_white.tex  (+11 more)
source/: CMakeLists.txt  define.h  main.cpp  version.h
source/core/: global.h
source/core/board/: board.h
source/core/piece/: IPiece.h
source/core/piece/IPiece_p/: ipiece_p.cpp
source/core/player/: player.cpp  player.h
source/gui/: IView.h
source/gui/BoardView/: boardview.cpp  boardview.h  boardview.ui
source/gui/HistoryView/: historyview.cpp  historyview.h  historyview.ui
source/gui/MainView/: mainview.cpp  mainview.h  mainview.ui
source/gui/UpgradeView/: upgradeview.cpp  upgradeview.h  upgradeview.ui
(+31 files in other folders)
